<resources>
  <string name="app_name">Memory</string>
  <string name="search">Search</string>
  <string name="add_memory">Add memory</string>
  <string name="add_memory_camel">Add Memory</string>
  <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam aliquet sagittis neque a
    congue. Cras mauris leo, pulvinar non nibh at, feugiat bibendum arcu. Interdum et malesuada fames ac ante ipsum
    primis in faucibus. Cras vel dolor dolor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi et orci
    ultrices, hendrerit sapien vel, malesuada arcu. Maecenas et massa dapibus, sagittis tellus in, pellentesque metus.
    Sed eleifend eros in leo euismod, sit amet porttitor massa sagittis. Donec quis felis id felis semper dictum ut eu
    massa. Curabitur ut volutpat dolor, sit amet molestie augue. Proin iaculis sem a commodo euismod. Donec commodo
    sollicitudin arcu in cursus. Vestibulum sit amet risus nunc. Nunc suscipit facilisis commodo. Cras mollis tincidunt
    nisl sit amet egestas. In mollis ligula eget magna bibendum, sed vulputate metus mollis.
  </string>
  <string name="tags_semicolon">Tags:</string>
  <string name="links">Links</string>
  <string name="documents">Documents</string>
  <string name="link_title">Link Title</string>
  <string name="address">Address</string>
  <string name="text">Text</string>
  <string name="tags">Tags</string>
  <string name="images">Images</string>
  <string name="delete_memory_qm">Delete memory?</string>
  <string name="delete">Delete</string>
  <string name="cancel">Cancel</string>
  <string name="deleting_memory_is_irreversible_do_you_want_to_proceed">Deleting memory is irreversible. Do you want to
    proceed?
  </string>
  <string name="add_images_allcaps">ADD IMAGES</string>
  <string name="memories">Memories</string>
  <string name="about">About</string>
  <string name="credits">Credits</string>
  <string name="developer_information">Developer Information</string>
  <string name="copied">Copied!</string>
  <string name="remember_something">Remember something!</string>
  <string name="settings">Settings</string>
  <string name="allow_notifications">Allow notifications</string>
  <string name="select_an_app">Select an app to add documents</string>
  <string name="privacy_policy">Privacy Policy</string>
  <string name="privacy_policy_link">https://volkanatalan.blogspot.com/2019/06/memory-app-privacy-policy.html</string>
</resources>
