<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="wrap_content"
  android:minWidth="450dp"
  android:layout_height="wrap_content"
  android:layout_margin="20dp"
  android:paddingStart="@dimen/dialog_outer_line_thickness"
  android:paddingEnd="@dimen/dialog_outer_line_thickness"
  android:paddingBottom="@dimen/dialog_outer_line_thickness"
  android:orientation="vertical"
  android:layout_gravity="center"
  android:gravity="center_vertical"
  android:clickable="true"
  android:focusable="true"
  android:background="@drawable/bg_rounded_primary"
  tools:context=".fragments.DeleteConfirmationFragment">
  
  <TextView
    android:id="@+id/headerTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/delete_memory_qm"
    android:padding="5dp"
    android:textSize="@dimen/h2"
    android:textColor="@color/white"
    android:textStyle="bold"/>
  
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical">
    
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="5dp"
      android:orientation="vertical"
      android:background="@drawable/bg_rounded_white">
      
      <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/deleting_memory_is_irreversible_do_you_want_to_proceed"
        android:textColor="@color/black"
        android:textSize="16sp"/>
      
    </LinearLayout>
    
    
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="2dp"
      android:orientation="horizontal" >
      
      <TextView
        android:id="@+id/deleteButtonTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/dialog_button_padding"
        android:layout_weight="1"
        android:layout_marginEnd="1dp"
        android:text="@string/delete"
        android:textSize="@dimen/h2"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@drawable/bg_button_rounded_white" />
      
      <TextView
        android:id="@+id/cancelTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/dialog_button_padding"
        android:layout_weight="1"
        android:layout_marginStart="1dp"
        android:text="@string/cancel"
        android:textSize="@dimen/h2"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@drawable/bg_button_rounded_white" />
    </LinearLayout>
  </LinearLayout>

</LinearLayout>